--- a/public_html/styles/rickies.css
+++ b/public_html/styles/rickies.css
@@ -147,12 +147,19 @@ header.details .gradient {
 header.details .big_year {
   color: rgba(255, 255, 255, 0.9);
   font-weight: 900;
-  font-size: 180px;
+  font-size: 120px;
+  margin-top: 50px;
   pointer-events: none;
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
   text-shadow: 0px 2px 8px rgba(51, 63, 72, 0.2);
+}
+@media screen and (min-width: 768px) {
+  header.details .big_year {
+    font-size: 180px;
+    margin-top: 0;
+  }
 }
 header.details.custom.color {
   background-size: auto 100%;
